# security-log-anomaly-localization

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: streamlit_app.py
artifacts/metrics/: historical-results.json  reproduction-manifest.json  reproduction-metrics.json
configs/: final.yaml  smoke.yaml
configs/public/: bgl-span.yaml  hdfs-sequence.yaml  openstack-sequence.yaml  smoke.yaml
docs/: architecture.md  error-analysis.md  experiments.md  iscc-2026-retrospective.md  model-card.md  portfolio-handoff.md  public-benchmark.md  resume-and-interview.md
examples/synthetic_logs/: normal.json  timeout_retry.json
scripts/: __init__.py  audit_publication.py  build_private_manifest.py  run_private_reproduction.py
src/seclog/: __init__.py  cli.py  config.py  constants.py  data.py  decode.py  features.py  inference.py  metrics.py  model.py  presentation.py  public_baselines.py  public_data.py  public_metrics.py  public_model.py  public_protocol.py  public_reporting.py  public_splitting.py  public_training.py  schemas.py  training.py  (+2 more)
tests/: test_cli.py  test_config.py  test_data.py  test_decode.py  test_features.py  test_inference.py  test_metrics.py  test_model.py  test_package.py  test_presentation.py  test_private_reproduction.py  test_public_baselines.py  test_public_cli.py  test_public_data.py  test_public_metrics.py  test_public_model.py  test_public_protocol.py  test_public_reporting.py  test_public_splitting.py  test_public_training.py  test_publication_audit.py  test_schemas.py  test_splitting.py  test_training.py
(+19 files in other folders)
