[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "security-log-anomaly-localization"
version = "0.1.0"
description = "Multi-task system-log anomaly detection, localization, and classification"
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = { text = "MIT" }
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.0,<3",
  "scikit-learn>=1.3,<2",
  "torch>=2.2,<3",
  "tqdm>=4.66,<5",
  "PyYAML>=6,<7",
]

[project.optional-dependencies]
demo = ["streamlit>=1.36,<2"]
dev = ["pytest>=8,<10", "pytest-cov>=5,<7", "ruff>=0.5,<1"]

[project.scripts]
seclog = "seclog.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/seclog"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
